论文阅读笔记

--- a/CRFRNN/1.md
+++ b/CRFRNN/1.md
@@ -2,3 +2,4 @@ Conditional random fields as recurrent neural networks
 
 link:http://www.cv-foundation.org/openaccess/content_iccv_2015/papers/Zheng_Conditional_Random_Fields_ICCV_2015_paper.pdf  
 
+这篇论文被分类到了NLP，可能是因为标题上有RNN。但其实它是CV。  
