--- a/ACL_2020/145.md
+++ b/ACL_2020/145.md
@@ -12,15 +12,32 @@ We explore the suitability of self-attention models for character-level neural m
 
 # 要解决什么问题
 
+大多数NMT是word-level的。  
+character-level NMT的好处有：  
+1. representation更compact  
+2. 能处理OOV  
+3. 如果多种语言使用相同的字符表，则可以共用同一套模型。  
+
 将self-attention模型用于字符级NMT中。
 
 # 作者的主要贡献
 
-在encoder block中结合由CNN中附件字符中提取出的特征。
+本文尝试两种模型：  
+1. 标准transformer  
+2. 卷积 + transformer  
+
+本文尝试以下实验：多语->英语  
+1. FR, ES -> EN  
+2. FR, ZH -> EN  
+
+在encoder block中结合由CNN中附近字符中提取出的特征。
 
 # 得到了什么结果
 
-性能比其它字符级模型好。  
-收敛速度比其它字符级模型快。  
+1. 注意力 + 字符级 + 卷积的模型  VS  单词级的模型  
+性能相同，前者参数更少  
+
+2. 卷积 + transformer VS 标准transformer  
+前者性能更好、收敛更快， 鲁棒性更好  
 
 # 关键字	
