--- a/ACL_2020/154.md
+++ b/ACL_2020/154.md
@@ -16,14 +16,18 @@ demographic bias：人口偏差
 
 # 要解决什么问题  
 
-NMT不太重视风格上的考虑，导致翻译结果倾向于older和male。  
+研究翻译结果中的demographic bias问题。  
 
 # 作者的主要贡献
 
-？  
+使用5种语言在3种商业翻译系统上做翻译。  
+比较翻译前的人口结构特点和翻译后的人口结构特点。  
 
 # 得到了什么结果
 
-？  
+翻译前和翻译后人口风格都有实质上的差异。  
+翻译结果倾向于older和male。    
 
 # 关键字
+
+翻译风格、翻译特点研究
