--- a/ACL_2020/201.md
+++ b/ACL_2020/201.md
@@ -12,8 +12,19 @@ Cross-lingual word embeddings (CLWE) are often evaluated on bilingual lexicon in
 
 Cross-lingual word embeddings (CLWE)：跨语言单词嵌入  
 bilingual lexicon induction (BLI): 双语词典推断  
+hinder：阻碍  
+retrofitting：改进  
 
 # 要解决什么问题
+
+用线性映射做CLWE会导致欠拟合，会影响下游任务的泛化能力。  
+
 # 作者的主要贡献
+
+让模型对训练词典过拟合。  
+
 # 得到了什么结果
+
+BLI上准确率下降，但下游任务的泛化能力提升。  
+
 # 关键字
