--- a/ACL_2020/34.md
+++ b/ACL_2020/34.md
@@ -12,11 +12,12 @@ Neural machine translation (NMT) encodes the source sentence in a universal way 
 
 # 要解决什么问题
 
-NMT没有考虑原文中不同单词的权重。
+NMT缺少从重要单词中抽取信息的的机制。
 
 # 作者的主要贡献
 
-使用单词频度信息把原文中的单词分为content和function两类。在NMT中增加content类型单词的关注度。
+（1）使用单词频度信息把原文中的单词分为content和function两类。  
+（2）把content单词序列用于翻译1.把content单词序列当作是额外的信息向量化2.针对content单词序列设计特殊的loss
 
 # 得到了什么结果
 
