--- a/ACL_2020/41.md
+++ b/ACL_2020/41.md
@@ -12,20 +12,39 @@ A neural machine translation (NMT) system is expensive to train, especially with
 
 # 要解决什么问题
 
-当网络变深变宽时，训练NMT非常expensive。
+NMT的特点是：1. 需要大量的训练数据 2. 跨语言的工作设定，因此需要更多的训练时间。   
+当网络变深变宽时，训练NMT非常expensive。  
+Transformer是最常用的NMT架构，改进的transformer有：  
+1. 30层以上的深度模型  
+2. 巨大batch size的scaling NMT  
+3. Curriculum Learning让NMT训练得更快。  
+
+Curriculum Learning是指训练时让样本从简单到难，因此对样本难度的评价很关键。已有评价方法：  
+1. 语言驱动，容易计算  
+2. 基于模型，有用但难计算   
 
 # 作者的主要贡献
 
 引入norm-based curriculum learning method来提升训练的效果。  
-计算并基于以下内容制定学习的课程表：  
+1. 提供难度评价算法：norm-based  
+原理：高频词和内容不敏感的罕见词的范数值较小。因此norm-based能同时表达语言驱动和基于模型这两种方法的特征。  
+
+2. norm计算出来之后用于衡量以下内容：  
 (1) 句子的难度 （2）模型的能力 （3）句子的权重  
-1/2/3是基于word embedding计算的，3又反过来影响embedding  
+1/2/3是基于word embedding计算的，3又反过来影响embedding    
+
+本文方法的特点：  
+1. 自动安排课程， practical NMT system  
+2. 把句子的难度结合到课程安排中  
 
 # 得到了什么结果
 
+1. 性能更好  
 WMT 14 English– German     BLEU     +1.17    speedup     2.22x  
 WMT17 Chinese–English     BLEU     + 1.56     speedup     3.33x
+2. 训练更快  
+3. 不需要引入额外的参数  
 
 # 关键字
 
-Encoder，curriculum , efficiency
+Encoder，curriculum , efficiency, deep
