--- a/ACL_2020/150.md
+++ b/ACL_2020/150.md
@@ -12,6 +12,22 @@ Multilingual neural machine translation (NMT) has led to impressive accuracy imp
 
 # 要解决什么问题
 
+多语言NMT是指在一个模型中handle多种语言对。  
+
+多语言NMT的优点：  
+1. 减少online serving的成本  
+2. 减少offline training的成本  
+3. 提升low-resource语言对的翻译性能。  
+
+多语言NMT的challenge：语言多样性和模型能力限制的矛盾    
+
+多语言模型的改进：  
+1. 提升模型容量  
+- 引入multiple encoder & decoder  
+- 改进注意力机制，关注language specific signals  
+2. model the specifity of different languages  
+- [?] 增加pre-designed tokens  
+
 多语言模型无法捕获不同语言的多样性和特殊性。
 
 # 作者的主要贡献
