--- a/ACL_2020/150.md
+++ b/ACL_2020/150.md
@@ -32,7 +32,18 @@ Multilingual neural machine translation (NMT) has led to impressive accuracy imp
 
 # 作者的主要贡献
 
-将interlingua整合到Encoder-Decoder结构中，用于学习与语言无关的表示，同时允许特定语言的特殊性。
+引入language-aware的中介语模块，将interlingua（中介语）整合到Encoder-Decoder结构中，用于学习与语言无关的表示，同时允许特定语言的特殊性。  
+中介语模块的作用：  
+1. model the shared specific space  
+2. 作为encoder和decoder之间的桥梁  
+
+本文的过程和方法：  
+1. language embedding，用于表达每个语言的特征  
+2. interlingua embedding，捕获所有语言的通用语义   
+3. 注意力机制：把encoder映射到共享语义空间  
+4. reconstruction loss和语义一致性损失函数：保证语义一致  
+5. language-aware positional embedding：作为初始状态  
+
 
 # 得到了什么结果
 
