--- a/ACL_2020/251.md
+++ b/ACL_2020/251.md
@@ -15,12 +15,14 @@ We propose to train a non-autoregressive machine translation model to minimize t
 
 # 要解决什么问题
 
-非自回归模型的传统做法：基于从teacher model的beam-search outputs得到的distilled corpus的训练  
+非自回归模型的传统做法：  
+先由teacher model的beam-search outputs生成distilled语料库  
+然后由NAT在此基础上训练  
 
 # 作者的主要贡献
 
-非自回归模型的新作法：ENGINE  
-最小化预训练的回归模型的energy  
+本文提供另一个NAT训练方法：  
+先由AT定义energy，然后由NAT最小化预训练的回归模型的energy  
 
 # 得到了什么结果
 
