--- a/ACL_2020/252.md
+++ b/ACL_2020/252.md
@@ -12,13 +12,20 @@ Over the last few years two promising research directions in low-resource neural
 
 # 要解决什么问题
 
+多语言NMT能解决low-resource问题和zero-shot问题，因为它可以从容易获取的数据上学习并迁移。   
+
 有两种方法来处理NMT的low-resource问题：  
 （1）基于多语言NMT，利用high-resource语言来提升low-resource语言的质量。  
 （2）在基于单语言数据的预训练模型上用少量数据做调优。  
 
 # 作者的主要贡献  
 
-将以上两种方法相结合  
+将以上两种方法相结合，多语NMT + 单语self-supervised  
+本文方法的特点：  
+1. 不需要多语言数据  
+2. 对所有语言有提升，尤其是low-resource  
+3. zero-shot翻译有提升  
+4. 没见过的新语言，只需要少量单语数据，也有比较好的效果    
 
 # 得到了什么结果
 
