--- a/ACL_2020/254.md
+++ b/ACL_2020/254.md
@@ -12,15 +12,30 @@ Adaptive policies are better than fixed policies for simultaneous translation, s
 
 # 要解决什么问题
 
-动态策略可以平衡翻译质量与延时之间的关系。  
+Simultaneous translation(ST)的特点是：source sentence还没结束，翻译过程就已经开始。  
+ST相对于全句翻译的难点是：翻译质量与延时之间的权衡。  
+
+policy：翻译策略，决定每一步是READ还是WRITE。  
+
+已有的policy有：  
+1. 把源分成几个trunk，用于SPEECH  
+2. 一些简单的static rule，用于TEXT  
+3. 根据已有信息动态计算，用于TEXT  
+
+已有的动态policy算法：  
+1. 基于全句翻译模型，实时性不好  
+2. 基于underlying翻译模型，翻译复杂  
 
 # 作者的主要贡献
 
-将固定策略以一种简单启发式的方法组合，得到动态策略算法。  
+本文的动态policy算法：
+    将固定策略以一种简单启发式的方法组合，得到动态策略算法。  
 
 # 得到了什么结果
 
+1. 实时翻译
 Chinese→English and German→English    4 BLEU提升     在同样延时条件下  
-全句翻译场景中BLEU更高而延时更小。  
+2. 全句翻译
+优于grid search，低于beam search  
 
 # 关键字
