--- a/ACL_2020/42.md
+++ b/ACL_2020/42.md
@@ -13,12 +13,28 @@ substantial reduction:大幅减少
 
 # 要解决什么问题
 
-Simultaneous translation任务的解码工作常常太激进（关注latency）或太保守(关注quality)。	
+ST存在为了降低延时而在信息不足的情况下翻译
+1. 难以选择合适的policy，解码工作常常太激进（关注latency）或太保守(关注quality)。	
+2. 不能改进前面步骤的错误。  
 
 # 作者的主要贡献
 
 具有实时校正能力的机会解码技术。	
-(1)预生成一定的推测单词(2)及时纠正之前预生成的单词中的错误。  
+(1)预生成一定的推测单词，opportunistic decoding技术  
+(2)及时纠正之前预生成的单词中的错误，timely correction机制。  
+
+本文方法过程：  
+1. decode more words than policy  
+2. review the extra outputs  
+3. revise these output  
+
+使用场景：  
+1. speech to text  
+2. speech to speech，extra words放在look-ahead window中。  
+
+提升一种评价revision-enables NMT的指标：  
+1. RAL，评价延时  
+2. 修正率  
 
 # 得到了什么结果
 
