--- a/ACL_2020/147.md
+++ b/ACL_2020/147.md
@@ -12,16 +12,27 @@ Most neural machine translation models only rely on pairs of parallel sentences,
 
 # 要解决什么问题
 
-大多数据NMT模型没有考虑parallel sentences的句法信息。
+问题：NMT假设能通过注意力机制能学到语言学知识，但实际上NMT学不到语言学的深层结构，例如parallel sentences的句法信息。   
+一些让NMT学习句法信息的尝试：  
+1. 把句法信息融入NMT  
+2. 把dependency parser的中间representation加入到word embedding  
+3. 把word representation和syntax representation交织  
+4. 两种数据增强技术，分别用于low resource和large scale  
 
 # 作者的主要贡献
 
-用不同的方法向NMT模型中加入句法信息。  
-提出一种新颖的，无参数的，具有依赖项意识的自我注意机制来提高其翻译质量。  
-新方法对长句子和low-resource场景特别有效。  
+本文方法的特点：  
+1. 强化注意力机制  
+2. 不增加flexity  
+
+本文方法的原理：  
+减少注意力分布的分散性，注意力机制的效果才会好。  
+
+本文方法：PASCAL，parent-scaled self-attention  
 
 # 得到了什么结果
 
+新方法对长句子和low-resource场景特别有效。  
 WMT English↔German  
 WMT English→Turkish  
 WAT English→Japanese  
