--- a/ACL_2020/148.md
+++ b/ACL_2020/148.md
@@ -16,15 +16,60 @@ backtranslation：反向翻译
 # motivation
 
 多语言翻译是指用一个NMT模型来做多个语言之间的翻译。  
+
 多语言NMT的优点：  
 1. 便于模型部署  
 2. 促进相关语言之间的知识迁移  
 3. 提升low-resource翻译  
 4. 使zero-shot翻译成为可能  
+
 多语言NMT存在的问题：  
 问题1：多语言NMT性能差于双语NMT。	  
 问题2：多语言NMT处理zero-shot数据时（相对于pivot-based模型）会出现“off-target translation问题”，即翻译成一个错误的语言。  
 [?] pivot-based methods  
+
+# 已有的解决问题的方法
+
+## 针对问题1：
+
+1. 每个语言都有对应的encoder/decoder  
+
+例如：  
+一对多翻译，共享encoder  
+多对多翻译，多个语言共享attention mechanism  
+
+缺点：scalability受到限制。  
+
+2. 把不同语言映射到同一个表示空间  
+
+例如：  
+with a target language symbol guiding the translation direction
+
+缺点：  
+忽略了不同语言的linguistic diversity  
+
+3. 在2的基础上，加入“语言的linguistic diversity”的考虑
+
+例如：  
+reorganizing parameter sharing  
+designing language-specific parameter generator  
+decoupling multilingual word encoding  
+
+**本文是以2为baseline探索3的方法**  
+
+## 针对问题2：  
+
+多语言NMT处理zero-shot数据时（相对于pivot-based模型）会出现“off-target translation问题”，即翻译成一个错误的语言。  
+
+出现问题的原因：  
+1. missing ingredient problem  
+2. spurious correlation issue  
+
+解决方法：  
+1. 跨语言正则化  
+2. generating artificial parallel data with backtranslation  
+
+**本文探索3的方法来解决zero-shot问题**
 
 # 作者的主要贡献
 
