--- a/ACL_2020/251.md
+++ b/ACL_2020/251.md
@@ -27,5 +27,6 @@ We propose to train a non-autoregressive machine translation model to minimize t
 # 得到了什么结果
 
 2014 DE-EN and WMT 2016 RO-EN上得到SOTA非自回归结果  
+性能优于不带优化的原始NAT  
 
 # 关键字
