--- a/ACL_2020/61.md
+++ b/ACL_2020/61.md
@@ -12,20 +12,21 @@ Neural conversation models are known to generate appropriate but non-informative
 
 # 要解决什么问题
 
-基于某个给定的文本的交流。	
+普通的聊天任务返回合理但无信息量的回答。  
+Cbr任务返回合理且包含信息的回答。  
+CbR的通常做法是（1）基于文本和问题生成document momery（2）生成指向momery的回答。  
 
 # 作者的主要贡献
 
+本文提供一种新的生成document momery的回答：  
 create the document memory with some anticipated responses in mind	  
-[?] teacher-studenty框架  
-使用teacher-studenty框架	  
-[?] 没看懂
-teacher：读入文本、内容和真实回答，学习怎样生成合适的回答  
-student：基于文本、内容，学习怎样生成应答。
+先用document、context、response训练一个teacher。CbR模型作为student，根据document， context和teacher生成document momery。  
+
+[?] teacher-student framework  
 
 # 得到了什么结果
 
-性能优于SOTA。	
+在CbR任务上性能优于SOTA。	
 
 # 关键字
 
